# painvidpro

./: .gitignore  README.md  pyproject.toml
scripts/: compile_dataset_slurm.sh  pipeline_to_dataset.sh  pipeline_to_dataset_n_folds.sh  pipeline_to_video_pkl.sh  pipeline_to_video_pkl_yoda.sh  process_pipeline_slurm.sh  ref_frame_tags.sh  ref_frame_variations_yoda.sh
scripts/process_video/: ref_frame_variations_yoda_slurm.sh  yoda_slurm.sh
src/painvidpro/: __init__.py
src/painvidpro/cli/: __init__.py  combine_hf_dataset_dicts.py  combine_hf_v_a_e_dataset_dicts.py  create_pipeline.py  create_ref_frames_for_pipeline.py  export_pipeline.py  export_pipeline_in_folds.py  export_pipeline_to_hf.py  export_pipeline_to_hf_video.py  export_pipeline_to_hf_video_as_entry.py  export_pipeline_to_vidoe_pkl.py  process_pipeline_overwrite_processor.py  process_test_dataset.py  visualize_pipeline.py
src/painvidpro/data_storage/: hdf5_video_archive.py
src/painvidpro/export_dataset/: __init__.py  export_to_hf.py  export_video.py  export_video_as_entry.py  export_video_pkl.py  extracted_frames.py  process_test_dataset.py  utils.py
src/painvidpro/image_alignment/: __init__.py  base.py  factory.py  light_glue.py  orb.py
src/painvidpro/image_tagger/: __init__.py  base.py  llava_next.py  wd_tagger.py
src/painvidpro/keyframe_detection/: __init__.py  base.py  factory.py  frame_diff.py
src/painvidpro/logging/: __init__.py  logging.py
src/painvidpro/logo_masking/: __init__.py  base.py  easy_ocr.py  factory.py  grounding_dino.py  no_changes.py
src/painvidpro/object_detection/: __init__.py  base.py  factory.py  grounding_dino.py
src/painvidpro/occlusion_masking/: __init__.py  accumulate_diff.py  base.py  dav2.py  factory.py  frame_diff.py  inspyrenet.py  occlusion_masking_accumulate_diff.py  occlusion_masking_base.py  occlusion_masking_frame_diff.py  rmbg.py  sam3.py
src/painvidpro/occlusion_removing/: __init__.py  base.py  factory.py  frame_merging.py  lama_inpainting.py
src/painvidpro/pipeline/: __init__.py  input_file_format.py  load_video_sources.py  pipeline.py  process_video_by_id.py
src/painvidpro/processors/: __init__.py  base.py  factory.py  flux_kontext.py  flux_kontext_ref_frame_variations.py  keyframe.py  loomis_keyframe.py  loomis_matting.py  matting.py  qwen_edit_ref_frame_variations.py  qwen_image_generation.py  realistic_frame.py  ref_frame_tagging.py  ref_frame_variations.py  sam3_loomis.py  sam3_matting.py
src/painvidpro/sequence_detection/: __init__.py  base.py  factory.py  fixed.py  grounding_dino.py
src/painvidpro/timelapse/: __init__.py  colorshift_filter.py  detect_keyframe.py  moving_standard_deviation_mask_occlusion.py  utils.py
src/painvidpro/utils/: export_dataset.py  hash_helper.py  image_diff.py  image_processing.py  list_processing.py  metadata.py  ref_frame_tags.py  ref_frame_variations.py
tests/occlusion_masking/: rmbg_test.py
tests/occlusion_removing/: frame_merging_test.py
tests/pipeline/: input_file_format_test.py
tests/sequence_detection/: grounding_dino_test.py
video_sources/: video_sources_split.json
video_sources/compiled/: acrylic.jsonl  loomis_portrai.jsonl  loomis_portrait.jsonl  oil.jsonl  pencil.jsonl
video_sources/youtube/: a_lu_art.jsonl  aham_art.jsonl  jon_harris.jsonl  loomis_portrait_drawing.jsonl  marcello_barenghi.jsonl  michael_james_smith.jsonl  one_pencil_art.jsonl  one_pencil_drawing.jsonl  one_pencil_tutorial.jsonl  painting_with_samir.jsonl  paintlane.jsonl  yasser_fayad.jsonl
(+12 files in other folders)
