[tool.poetry]
name = "painvidpro"
version = "0.1.0"
description = "Painting Video Processing: Downloading and Processing Painting Videos"
authors = ["Markus Pobitzer"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
viscon = {git = "git@github.com:Markus-Pobitzer/viscon.git"}
lightglue = {git = "git@github.com:cvg/LightGlue.git"}
yt-dlp = "^2025.1.12"
scipy = "^1.15.1"
opencv-python = "^4.10.0.84"
tqdm = "^4.67.1"
pillow = "^11.1.0"
bottleneck = "^1.4.2"
torch = "^2.6.0"
transformers = "^4.48.2"
ffmpeg-python = "^0.2.0"
timm = "^1.0.15"
transparent-background = "^1.3.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.3"
pre-commit = "^3.7.1"
mypy = "^1.10.1"



[tool.poetry.group.extras.dependencies]
gradio = "^5.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 119

[tool.ruff.lint]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "F402", "F823" ]
select = ["C", "E", "F", "I", "W"]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["viscon"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
